Fixed persistent object layout issue on Edge

--- a/src/WebComponents/PersistentObjectTab/persistent-object-tab-cell.scss
+++ b/src/WebComponents/PersistentObjectTab/persistent-object-tab-cell.scss
@@ -1,12 +1,10 @@
 @import "../_vars.scss";
 
-$cellHeight: var(--theme-h2);
-
 :host {
     float: left;
     position: relative;
-    height: $cellHeight;
-    line-height: $cellHeight;
+    height: var(--vi-persistent-object-tab-cell-height);
+    line-height: var(--vi-persistent-object-tab-cell-height);
 
     #background {
         position: absolute;
